removed redundant and updated versions of some dependencies (#261)